kubernetes/apps/default/buildkit/app/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://crd.kantai.xyz/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "buildkit-allow-ingress"
spec:
  endpointSelector:
    matchExpressions:
      - key: app.kubernetes.io/instance
        operator: In
        values: ["buildkit-amd64", "buildkit-arm64"]
  ingress:
    - fromEntities:
        - "world"
